# f-u

./: .envrc  .gitignore  144747.patch  Cargo.toml  Makefile  build.rs  disable_sigsegv_handle.patch  flake.nix  formatter.nix  package.nix
lib/: Cargo.toml  build.rs
lib/src/: flake.cc  lib.rs
lib/src/include/: flake.hh
src/: main.cc
src/lib/: binding.cc  binding.h  lib.rs
src/lib/include/: binding.hh
