[package]
name = "f-u"
version = "0.1.0"
edition = "2021"
authors = [ "John Rinehart <johnrichardrinehart@gmail.com>" ]

[lib]
name = "fu"
path = "src/lib/lib.rs"

[[bin]]
name = "f-u"
path = "src/bin/main.rs"

[dependencies]

[build-dependencies]
#bindgen = "0.70.1"
bindgen = { git = "https://github.com/johnrichardrinehart/rust-bindgen", rev = "81fba233fd727ca0fea86eba7de74ac31428b71d" }
pkg-config = "0.3.31"
